WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288185
REGRESSION(
290751@main
): Broke the internal visionOS build
https://bugs.webkit.org/show_bug.cgi?id=288185
Summary
REGRESSION(290751@main): Broke the internal visionOS build
Abrar Rahman Protyasha
Reported
2025-02-20 23:21:07 PST
The error reads: Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:74:66: error: no member named 'ptr' in 'std::reference_wrapper<WebKit::ModelProcessModelPlayerProxy>'
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-20 23:21:18 PST
<
rdar://problem/145274747
>
Abrar Rahman Protyasha
Comment 2
2025-02-20 23:24:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41048
EWS
Comment 3
2025-02-20 23:45:44 PST
Committed
290771@main
(781edcb35aa5): <
https://commits.webkit.org/290771@main
> Reviewed commits have been landed. Closing PR #41048 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug