REGRESSION(290751@main): Broke the internal visionOS build https://bugs.webkit.org/show_bug.cgi?id=288185 rdar://145274747

Reviewed by Aditya Keerthi.

This patch fixes the ENABLE(MODEL_PROCESS) build. std::reference_wrapper
does not have a ptr() method. We adopt the get() method instead.

```
/Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:74:66: error: no member named 'ptr' in 'std::reference_wrapper<WebKit::ModelProcessModelPlayerProxy>'
   74 |     _modelProcessModelPlayerProxy = modelProcessModelPlayerProxy.ptr();
1 error generated.
```

* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(-[WKModelProcessModelPlayerProxyObjCAdapter initWithModelProcessModelPlayerProxy:]):

Canonical link: https://commits.webkit.org/290771@main